add ioi services